--- a/css/loginForms.css
+++ b/css/loginForms.css
@@ -39,8 +39,10 @@ body {
           box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
-#contact h3 {
+#contact > a {
   display: block;
+  color: #777;
+  text-decoration: none;
   font-size: 30px;
   font-weight: 300;
   margin-bottom: 20px;
