--- a/scss/_section1.scss
+++ b/scss/_section1.scss
@@ -14,44 +14,54 @@
   height: 100%;
   position: relative;
 }
-.gallery-item .image {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+.gallery-item {
+  .image {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
 }
-.gallery-item .image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
-  cursor: pointer;
-  transition: 0.7s ease-in-out;
+.gallery-item {
+  .image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    cursor: pointer;
+    transition: 0.7s ease-in-out;
+  }
 }
 
-.gallery-item:hover .image img {
-  transform: scale(1.5);
-  filter: grayscale(100%);
+.gallery-item:hover {
+  .image img {
+    transform: scale(1.5);
+    filter: grayscale(100%);
+  }
 }
-.gallery-item .text {
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #fff;
-  font-size: 25px;
-  pointer-events: none;
-  z-index: 10;
-  transition: 0.5s ease-in-out;
-  backdrop-filter: blur(5px) saturate(1.8);
-  letter-spacing: 0.5rem;
-  text-transform: uppercase;
+.gallery-item {
+  .text {
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-size: 25px;
+    pointer-events: none;
+    z-index: 10;
+    transition: 0.5s ease-in-out;
+    backdrop-filter: blur(5px) saturate(1.8);
+    letter-spacing: 0.5rem;
+    text-transform: uppercase;
+  }
 }
-.gallery-item:hover .text {
-  opacity: 1;
-  animation: move-down 0.5s linear;
-  padding: 3%;
-  border-radius: 5%;
+.gallery-item:hover {
+  .text {
+    opacity: 1;
+    animation: move-down 0.5s linear;
+    padding: 3%;
+    border-radius: 5%;
+  }
 }
 
 @keyframes move-down {
